# Torch_cpp

./: .gitignore  Build_steps.txt  CMakeLists.txt  README.md  Torch_diamonds.cpp  Torch_images.cpp  torch_app.cpp
